[gd_scene load_steps=31 format=3 uid="uid://btqfyyto4bbqj"]

[ext_resource type="Script" path="res://scenes/help_screen/help_screen.gd" id="1_my7bu"]
[ext_resource type="PackedScene" uid="uid://bdpx1uwt1ltf7" path="res://objects/frame/frame.tscn" id="1_vkil2"]
[ext_resource type="PackedScene" uid="uid://db55dqikpqoof" path="res://objects/boss/boss.tscn" id="2_8ee24"]
[ext_resource type="Theme" uid="uid://b4i4qyx8hd1tk" path="res://assets/themes/ui_theme.tres" id="4_2nsxa"]
[ext_resource type="Texture2D" uid="uid://d0oae8uw8g2l6" path="res://assets/textures/fade_in.png" id="5_d21s4"]
[ext_resource type="Texture2D" uid="uid://d1hfjgecs6fj" path="res://assets/textures/fade_out.png" id="6_fqhwv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mw2t1"]
atlas = ExtResource("5_d21s4")
region = Rect2(0, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_sek2t"]
atlas = ExtResource("5_d21s4")
region = Rect2(960, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi7yq"]
atlas = ExtResource("5_d21s4")
region = Rect2(1920, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyhpr"]
atlas = ExtResource("5_d21s4")
region = Rect2(2880, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm0tu"]
atlas = ExtResource("5_d21s4")
region = Rect2(3840, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymtd0"]
atlas = ExtResource("5_d21s4")
region = Rect2(4800, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ywpw"]
atlas = ExtResource("5_d21s4")
region = Rect2(5760, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_loo8f"]
atlas = ExtResource("5_d21s4")
region = Rect2(6720, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqylr"]
atlas = ExtResource("5_d21s4")
region = Rect2(7680, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbitk"]
atlas = ExtResource("5_d21s4")
region = Rect2(8640, 0, 960, 540)

[sub_resource type="SpriteFrames" id="SpriteFrames_3vsht"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw2t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sek2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi7yq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyhpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm0tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymtd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ywpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loo8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqylr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbitk")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_r3ena"]
atlas = ExtResource("6_fqhwv")
region = Rect2(0, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbcol"]
atlas = ExtResource("6_fqhwv")
region = Rect2(960, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmu62"]
atlas = ExtResource("6_fqhwv")
region = Rect2(1920, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1pxt"]
atlas = ExtResource("6_fqhwv")
region = Rect2(2880, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tof8"]
atlas = ExtResource("6_fqhwv")
region = Rect2(3840, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_yki4q"]
atlas = ExtResource("6_fqhwv")
region = Rect2(4800, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1bbb"]
atlas = ExtResource("6_fqhwv")
region = Rect2(5760, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bqul"]
atlas = ExtResource("6_fqhwv")
region = Rect2(6720, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_j161j"]
atlas = ExtResource("6_fqhwv")
region = Rect2(7680, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1626"]
atlas = ExtResource("6_fqhwv")
region = Rect2(8640, 0, 960, 540)

[sub_resource type="SpriteFrames" id="SpriteFrames_kt7vl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3ena")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbcol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmu62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1pxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tof8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yki4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1bbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bqul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j161j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1626")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="InputEventAction" id="InputEventAction_n4y43"]
action = &"interact"

[sub_resource type="Shortcut" id="Shortcut_0v5rw"]
events = [SubResource("InputEventAction_n4y43")]

[node name="help_screen" type="Node2D"]
script = ExtResource("1_my7bu")

[node name="Frame" parent="." instance=ExtResource("1_vkil2")]

[node name="Boss" parent="." instance=ExtResource("2_8ee24")]
position = Vector2(880, 128)

[node name="Fade_in" type="AnimatedSprite2D" parent="."]
position = Vector2(480, 272)
sprite_frames = SubResource("SpriteFrames_3vsht")
autoplay = "default"

[node name="Fade_out" type="AnimatedSprite2D" parent="."]
position = Vector2(480, 272)
sprite_frames = SubResource("SpriteFrames_kt7vl")

[node name="Label" type="Label" parent="."]
offset_left = 182.0
offset_top = 63.0
offset_right = 780.0
offset_bottom = 505.0
theme = ExtResource("4_2nsxa")
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 38
text = "- Controls -
Arrow keys / WASD - Move and push
Spacebar / X - Pick up or drop

- Objective -
Match 3 objects together to clear them.

When the enemy appears, match cannons to blast em!
Matching bombs will damage your raft.

Put out fires by tapping and holding spacebar.
"
horizontal_alignment = 1

[node name="main_menu_button" type="Button" parent="."]
z_index = 13
offset_left = 433.0
offset_top = 415.0
offset_right = 534.0
offset_bottom = 449.0
theme = ExtResource("4_2nsxa")
action_mode = 0
shortcut = SubResource("Shortcut_0v5rw")
shortcut_in_tooltip = false
text = "Main Menu
"

[connection signal="animation_finished" from="Fade_out" to="." method="_on_fade_out_animation_finished"]
[connection signal="pressed" from="main_menu_button" to="." method="_on_main_menu_button_pressed"]
